--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+ 
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css">
+  
 </head>
-<body>
+<body class="container" style="padding-top: 50px;">
   <app-root></app-root>
+ 
 </body>
 </html>
