--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css">
   
 </head>
-<body class="container" style="padding-top: 50px;">
+<body class="cont" style="padding-top: 50px;">
   <app-root></app-root>
  
 </body>
